--- a/SharpForum.Models/SharpForum.Models.csproj
+++ b/SharpForum.Models/SharpForum.Models.csproj
@@ -42,11 +42,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BindingModels\LoginBindingModel.cs" />
-    <Compile Include="Reply.cs" />
-    <Compile Include="Topic.cs" />
-    <Compile Include="User.cs" />
+    <Compile Include="EntityModels\Category.cs" />
+    <Compile Include="EntityModels\Reply.cs" />
+    <Compile Include="EntityModels\SubCategory.cs" />
+    <Compile Include="EntityModels\Topic.cs" />
+    <Compile Include="EntityModels\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserRole.cs" />
+    <Compile Include="EntityModels\UserRole.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
