--- a/SharpForum.Application/bin/SharpForum.Application.dll.config
+++ b/SharpForum.Application/bin/SharpForum.Application.dll.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="SharpForumContext" connectionString="Data Source=(Local);Initial Catalog=SharpForumDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="SharpForumContext" connectionString="Data Source=(Local);Initial Catalog=SharpForumDB;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -18,6 +18,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="Off" >
+    </customErrors>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
