--- a/SharpForum.Application/SharpForum.Application.csproj
+++ b/SharpForum.Application/SharpForum.Application.csproj
@@ -202,6 +202,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
+    <Compile Include="Areas\Admin\Controllers\CategoryAdministrationController.cs" />
     <Compile Include="Areas\Moderator\Controllers\ReplyModerationController.cs" />
     <Compile Include="Areas\Moderator\Controllers\TopicModerationController.cs" />
     <Compile Include="Areas\Moderator\ModeratorAreaRegistration.cs" />
@@ -246,6 +247,10 @@
     <Content Include="Areas\Moderator\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Moderator\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\Moderator\Views\ReplyModeration\Edit.cshtml" />
+    <Content Include="Areas\Moderator\Views\TopicModeration\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\CategoryAdministration\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\CategoryAdministration\New.cshtml" />
+    <Content Include="Areas\Admin\Views\CategoryAdministration\Index.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -341,10 +346,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Areas\Admin\Controllers\" />
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Areas\Moderator\Models\" />
-    <Folder Include="Areas\Moderator\Views\TopicModeration\" />
     <Folder Include="Views\Admin\" />
   </ItemGroup>
   <PropertyGroup>
