--- a/SharpForum.Services/SharpForum.Services.csproj
+++ b/SharpForum.Services/SharpForum.Services.csproj
@@ -51,7 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CategoriesService.cs" />
+    <Compile Include="CategoryService.cs" />
     <Compile Include="EditService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReplyService.cs" />
