--- a/SharpForum.Application/Web.config
+++ b/SharpForum.Application/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <!--<add name="SharpForumContext" connectionString="Data Source=(Local);Initial Catalog=SharpForumDB;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />-->
-    <add name="SharpForumContext" connectionString="secret2" providerName="System.Data.SqlClient" />
+    <add name="SharpForumContext" connectionString="secret" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
