--- a/SharpForum.Application/Web.config
+++ b/SharpForum.Application/Web.config
@@ -1,34 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-  For more information on how to configure your ASP.NET application, please visit
-  https://go.microsoft.com/fwlink/?LinkId=301880
-  -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!-- Development -->
+    <!-- Input your database connection string here -->
     <add name="SharpForumContext" connectionString="Data Source=DESKTOP-A41GRHT;Initial Catalog=SharpForumDB;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
-    <!--<add name="SharpForumContext" connectionString="secret" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	<!-- Input your email service provider info here -->
+    <add key="EmailAccountName" value="example@example.com" />
+    <add key="EmailAccountPass" value="example" />
+    <add key="EmailEnableSsl" value="true" />
+    <add key="EmailPort" value="587" />
+    <add key="EmailServer" value="smtp-relay.example.com" />
+    <add key="EmailSender" value="example@example.com" />
+	<!-- Input your facebook auth info here -->
+	<add key="FacebookAppId" value="1595035863842427" />
+	<add key="FacebookAppSecret" value="secret" />
   </appSettings>
-  <!--
-    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
-
-    The following attributes can be set on the <httpRuntime> tag.
-      <system.Web>
-        <httpRuntime targetFramework="4.8" />
-      </system.Web>
-  -->
   <system.web>
-    <customErrors mode="Off" />
+    <customErrors mode="On" />
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.5.2" />
