--- a/SharpForum.Data/SharpForum.Data.csproj
+++ b/SharpForum.Data/SharpForum.Data.csproj
@@ -60,8 +60,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data.cs" />
+    <Compile Include="DatabaseInitializer.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeedValues.cs" />
     <Compile Include="SharpForumContext.cs" />
   </ItemGroup>
   <ItemGroup>
