Lighten project repo

--- a/SharpForum.Application/SharpForum.Application.csproj
+++ b/SharpForum.Application/SharpForum.Application.csproj
@@ -220,15 +220,10 @@
     <Content Include="Content\avatars\avatar2.png" />
     <Content Include="Content\avatars\avatar3.png" />
     <Content Include="Content\fontawesome\all.css" />
-    <Content Include="Content\fontawesome\all.min.css" />
     <Content Include="Content\style\bootstrap.css" />
-    <Content Include="Content\style\bootstrap.min.css" />
     <Content Include="Content\style\style.css" />
     <Content Include="Content\img\bg.png" />
     <Content Include="Content\img\defaultavatar.jpg" />
-    <Content Include="Content\webfonts\fa-brands-400.svg" />
-    <Content Include="Content\webfonts\fa-regular-400.svg" />
-    <Content Include="Content\webfonts\fa-solid-900.svg" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="ApplicationInsights.config">
@@ -248,39 +243,16 @@
     <Content Include="Areas\Admin\Views\Shared\_AdminCategoryMenu.cshtml" />
     <Content Include="Areas\Admin\Views\UserAdministration\EditProfile.cshtml" />
     <Content Include="Areas\Admin\Views\UserAdministration\SetRole.cshtml" />
-    <Content Include="Content\style\bootstrap.min.css.map" />
     <Content Include="Content\style\bootstrap.css.map" />
-    <Content Include="Content\webfonts\fa-brands-400.eot" />
-    <Content Include="Content\webfonts\fa-brands-400.ttf" />
-    <Content Include="Content\webfonts\fa-brands-400.woff" />
-    <Content Include="Content\webfonts\fa-brands-400.woff2" />
-    <Content Include="Content\webfonts\fa-regular-400.eot" />
-    <Content Include="Content\webfonts\fa-regular-400.ttf" />
-    <Content Include="Content\webfonts\fa-regular-400.woff" />
-    <Content Include="Content\webfonts\fa-regular-400.woff2" />
-    <Content Include="Content\webfonts\fa-solid-900.eot" />
-    <Content Include="Content\webfonts\fa-solid-900.ttf" />
-    <Content Include="Content\webfonts\fa-solid-900.woff" />
     <Content Include="Content\webfonts\fa-solid-900.woff2" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
-    <Content Include="Scripts\bs\bootstrap.bundle.js" />
-    <Content Include="Scripts\bs\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bs\bootstrap.js" />
-    <Content Include="Scripts\bs\bootstrap.min.js" />
-    <Content Include="Scripts\bs\bootstrap.bundle.js.map" />
-    <Content Include="Scripts\bs\bootstrap.bundle.min.js.map" />
     <Content Include="Scripts\bs\bootstrap.js.map" />
-    <Content Include="Scripts\bs\bootstrap.min.js.map" />
-    <Content Include="Scripts\fontawesome\all.js" />
-    <Content Include="Scripts\fontawesome\all.min.js" />
+    <Content Include="Scripts\fontawesome\fontawesome.js" />
     <Content Include="Scripts\jquery-3.6.0.js" />
     <Content Include="Scripts\jquery.validate.js" />
-    <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\respond.js" />
-    <Content Include="Scripts\respond.matchmedia.addListener.js" />
-    <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
-    <Content Include="Scripts\respond.min.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
