--- a/SharpForum.Application/Web.config
+++ b/SharpForum.Application/Web.config
@@ -20,7 +20,7 @@
     <add key="EmailServer" value="smtp-relay.example.com" />
     <add key="EmailSender" value="example@example.com" />
 	<!-- Input your facebook auth info here -->
-	<add key="FacebookAppId" value="1595035863842427" />
+	<add key="FacebookAppId" value="12345" />
 	<add key="FacebookAppSecret" value="secret" />
   </appSettings>
   <system.web>
