--- a/SharpForum.Application/Web.config
+++ b/SharpForum.Application/Web.config
@@ -5,7 +5,7 @@
   </configSections>
   <connectionStrings>
     <!-- Input your database connection string here -->
-    <add name="SharpForumContext" connectionString="Data Source=DESKTOP-A41GRHT;Initial Catalog=SharpForumDB;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+    <add name="SharpForumContext" connectionString="Data Source=HOSTSERVER;Initial Catalog=SharpForumDB;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
