--- a/SharpForum.API/appsettings.json
+++ b/SharpForum.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "SQLite": "Data source=sharpforum.db"
+  },
+  "TokenKey": "secret",
   "AllowedHosts": "*"
 }
