--- a/SharpForum.Application/SharpForum.Application.csproj
+++ b/SharpForum.Application/SharpForum.Application.csproj
@@ -7,8 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SharpForum.Domain\SharpForum.Domain.csproj" />
-    <ProjectReference Include="..\SharpForum.Persistence\SharpForum.Persistence.csproj" />
+    <ProjectReference Include="..\SharpForum.Repository\SharpForum.Repository.csproj" />
   </ItemGroup>
 
 </Project>
