--- a/SharpForum.API/appsettings.json
+++ b/SharpForum.API/appsettings.json
@@ -9,5 +9,10 @@
     "SQLite": "Data source=sharpforum.db"
   },
   "TokenKey": "secret",
+  "Email": "sharpforum@example.com",
+  "SendGrid": {
+    "Key": "secret",
+    "User": "sharpforum@example.com"
+  },
   "AllowedHosts": "*"
 }
