change to monolitic variant

--- a/SharpForum.API/appsettings.json
+++ b/SharpForum.API/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "SQLite": "Data source=sharpforum.db"
+    "SQLite": "Data source=sharpforum.db",
+    "MSSQL": "Server=AURORA;Database=SharpForum;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
   "TokenKey": "secret",
   "Email": "sharpforum@example.com",
