--- a/SharpForum.API/SharpForum.API.csproj
+++ b/SharpForum.API/SharpForum.API.csproj
@@ -9,18 +9,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CloudinaryDotNet" Version="1.15.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="NSwag.AspNetCore" Version="13.15.5" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\SharpForum.Application\SharpForum.Application.csproj" />
-    <ProjectReference Include="..\SharpForum.Service\SharpForum.Service.csproj" />
+    <PackageReference Include="SendGrid" Version="9.25.1" />
   </ItemGroup>
 	
 </Project>
