--- a/SharpForum.API/appsettings.json
+++ b/SharpForum.API/appsettings.json
@@ -17,5 +17,6 @@
     "Key": "secret",
     "User": "sharpforum@example.com"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Salt": "EGQ86nJmPsDaniel"
 }
