--- a/sharpforum-web/package.json
+++ b/sharpforum-web/package.json
@@ -13,10 +13,14 @@
     "@types/react-dom": "^18.0.9",
     "axios": "^1.2.0",
     "bootstrap": "^5.2.3",
+    "date-fns": "^2.29.3",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.0.2",
     "mobx-react": "^7.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.0.0",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
