--- a/sharpforum-web/package.json
+++ b/sharpforum-web/package.json
@@ -26,7 +26,8 @@
     "react-scripts": "5.0.1",
     "sass": "^1.56.1",
     "typescript": "^4.9.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
