--- a/sharpforum-web/package.json
+++ b/sharpforum-web/package.json
@@ -22,13 +22,13 @@
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.0.2",
     "mobx-react": "^7.6.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.6.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-i18next": "^12.0.0",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.56.1",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4",
